Fix a couple of visual glitches on Firefox

--- a/src/video-grid/VideoTile.module.css
+++ b/src/video-grid/VideoTile.module.css
@@ -38,6 +38,10 @@ limitations under the License.
   height: 100%;
   object-fit: cover;
   background-color: var(--cpd-color-bg-subtle-primary);
+  /* This transform is a no-op, but it forces Firefox to use a different
+  rendering path, one that actually clips the corners of <video> elements into
+  the intended rounded shape. We can remove this if Firefox stops being broken. */
+  transform: translate(0);
 }
 
 .videoTile.isLocal:not(.screenshare) video {
